add hook management

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,6 +29,10 @@ Metrics/MethodLength:
   Max: 30
   CountAsOne: ['array', 'hash', 'heredoc']
 
+Naming/FileName:
+  Exclude:
+    - lib/microsoft-graph-client
+
 Layout/FirstArgumentIndentation:
   EnforcedStyle: consistent
 
